# OpenGL-Game2D

./: .gitignore  CMakeLists.txt  README.md
Module/: FindGLFW3.cmake
cmake/: glm2.cmake
include/glad/: glad.h
levels/: one.lvl
lib/: glfw3.lib
resource/: doc.txt  fragmentgls.gls  frametest_f.gls  frametest_v.gls  ligth_v.gls  ligthf_fgls.gls  stenil.gls  stenilfragment.gls  vertexgls.gls
shaders/: sprite.frag  sprite_test.vs
shaders/shaders/: postprocessor.frag  postprocessor.vs  sprite.frag  sprite_test.frag  sprite_test.vs
src/: depthtest.cpp  fpstest.cpp  glad.c  main.cpp  shaderManager.cpp  shaderManager.h  stencitest.cpp  test.cpp  utils.h
src/game2d/: BallObject.cpp  BallObject.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  ParticalGenerator.cpp  ParticalGenerator.h  PostProcessor.cpp  PostProcessor.h  PowerUp.h  SpriteRenderer.cpp  SpriteRenderer.h  main.cpp  resourcemanager.cpp  resourcemanager.h  texture.cpp  texture.h
